# impostro-client

./: .gitignore  Cargo.toml  Procfile  Trunk.toml  build.py  build.sh  index.css  index.html  main.js  package-lock.json  package.json
pkg/: impostro.d.ts  impostro.js  impostro_bg.wasm  impostro_bg.wasm.d.ts  package.json
src/: app.rs  lib.rs  login.rs  main.js  main.rs
