[package]
name = "impostro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] } 
gloo-console = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"