[package]
name = "impostro"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] } 
gloo-console = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"
impostro-shared = { git = "https://github.com/necromfox/impostro-shared" }
getrandom = { version = "*", features = ["js"] }
web-sys = "*"
serde = "*"
serde_json = "*"
reqwest-wasm = { version = "*", features = ["json"]}
ws_stream_wasm = "*"
futures = "*"
wasm-bindgen-futures = "*"